# EasyLabel

./: README.md  config.yml  data.csv  easy_label.py  pyproject.toml
modules/: config.py  tui backup.py  tui.py  tui_tools.py
